fix: fixing small bugs
* fixed redesign also on other pages

--- a/src/popUp.html
+++ b/src/popUp.html
@@ -6,7 +6,9 @@
         <title>Taskify Business - Edit Task</title>
         <link rel="stylesheet" href="css/popUp.css">
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
-        <link href="https://api.fontshare.com/v2/css?f[]=excon@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=general-sans@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=switzer@1&display=swap" rel="stylesheet">
     </head>
     <body>
         <center>
@@ -15,20 +17,20 @@
             </div>
         </center>
         <div id="main" style="opacity: 0;">
-            <h1 style="font-size: 45px; margin-top: -5px;"><img src="assets/_edit.png" draggable="false" width="30px" height="30px"> Edit Task <p style="display: inline; font-style: inherit; font-family: 'Excon', sans-serif;" class="special">Proprieties:</p></h1>
-            <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Excon', sans-serif;" id="startingText">Edit the properties of the currently selected task.</h4>
+            <h1 style="font-size: 45px; margin-top: -5px; font-family: 'General Sans', sans-serif;"><img src="assets/_edit.png" draggable="false" width="30px" height="30px"> Edit Task <p style="display: inline; font-style: inherit; font-family: 'General Sans', sans-serif;" class="special">Proprieties:</p></h1>
+            <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Switzer', sans-serif;" id="startingText">Edit the properties of the currently selected task.</h4>
             <div class="modify-task-row">
-                <label for="inputName" style="color: white; font-family: 'Excon', sans-serif;">Task Name: </label>
+                <label for="inputName" style="color: white; font-family: 'Switzer', sans-serif;">Task Name: </label>
                 <input type="text" id="inputName" placeholder="Task Name..." title="Enter the new Task Name" maxlength="20">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputPV" style="color: white; font-family: 'Excon', sans-serif;">Previous Version: </label>
+                <label for="inputPV" style="color: white; font-family: 'Switzer', sans-serif;">Previous Version: </label>
                 <input type="text" id="inputPV" placeholder="Previous Version..." title="Optional" maxlength="10">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputNV" style="color: white; font-family: 'Excon', sans-serif;">Newer Version: </label>
+                <label for="inputNV" style="color: white; font-family: 'Switzer', sans-serif;">Newer Version: </label>
                 <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional" maxlength="10">
             </div>
             <br>
