--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -7,10 +7,13 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="stylesheet" href="css/companyCreation.css">
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=general-sans@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=switzer@1&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="container" style="opacity: 0;">
-            <h1>CREATE YOUR <p style="display: inline; font-size: 80px; font-style: italic;" class="special">COMPANY.</p></h1>
+            <h1>CREATE YOUR <p style="display: inline; font-size: 70px; font-style: italic;" class="special">COMPANY.</p></h1><br>
             <h3 style="margin-top: -50px; margin-left: 10px; margin-right: 10px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members, create Tasks and more!</h3>
             <br>
             <div class="inputs">
@@ -18,7 +21,7 @@
             </div>
             <p id="warn"><img src="assets/_warn.png" width="20px" height="20px" draggable="false"> The company name must contain at least <b style="font-weight: 700;">8 characters</b></p>
             <br> <br>
-            <button id="companyCreation"><img src="assets/_create.png" draggable="false" height="25px" width="25px"> Create</button>
+            <button id="companyCreation" style="font-family: 'General Sans', sans-serif;"><img src="assets/_create.png" draggable="false" height="25px" width="25px"> Create</button>
         </div>
     </body>
     <script src="js/companyCreation.js"></script>
