--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <button id="employeeBtn" style="background-color: #232323; border: none; border-radius: 5px;"><img src="assets/_employee.png" alt="Add Employee" height="25px" width="25px" title="Add Employee"></button>
             </div>
             <div class="employee-inputs" id="employeeIn">
-                <input type="text" id="employeeInput" placeholder="Employee Name..." spellcheck="false" title="Previous version" maxlength="10" style="width: 390px;">
+                <input type="text" id="employeeInput" placeholder="Employee Name..." spellcheck="false" title="Employee Name" maxlength="10" style="width: 390px;">
                 <button id="closeEmployeeBtn" style="background-color: #232323; border: none; border-radius: 5px;"><img src="assets/_close.png" alt="Add Employee" height="20px" width="20px" title="Add Employee"></button>
             </div>
             <input class="inputName" id="aiInput" type="text" placeholder="Task name or /ai to open AI..." autocomplete="on" style="display: block;" spellcheck="false"/>
