--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,14 @@
         <link href="https://api.fontshare.com/v2/css?f[]=switzer@1&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 style="font-family: 'General Sans', sans-serif; font-size: 60px;"><img src="assets/_maintenanceIcon.png" alt="Icon" style="width: 40px; height: 40px;" draggable="false" title="Tasks"> TASKS</h1>
-        <div class="bubbleMaintenance">Maintenance Tasks <p id="maintenanceNumber" style="display: inline; right: 0px; background-color: rgb(31, 31, 163); border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;null&nbsp;&nbsp;</p></div><br>
-        <ul id="softwareList"></ul><br>
-        <div class="bubbleOut">Out Of Maintenance Tasks <p id="outNumber" style="display: inline; right: 0px; background-color: #88210c; border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;null&nbsp;&nbsp;</p></div><br>
-        <ul id="fuoriList"></ul><br>
-        <div class="app" id="taskCreation">
+        <div id="mainSection">
+            <h1 style="font-family: 'General Sans', sans-serif; font-size: 60px;"><img src="assets/_maintenanceIcon.png" alt="Icon" style="width: 40px; height: 40px;" draggable="false" title="Tasks"> TASKS</h1>
+            <div class="bubbleMaintenance">Maintenance Tasks <p id="maintenanceNumber" style="display: inline; right: 0px; background-color: rgb(31, 31, 163); border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;null&nbsp;&nbsp;</p></div><br>
+            <ul id="softwareList"></ul><br>
+            <div class="bubbleOut">Out Of Maintenance Tasks <p id="outNumber" style="display: inline; right: 0px; background-color: #88210c; border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;null&nbsp;&nbsp;</p></div><br>
+            <ul id="fuoriList"></ul><br>
+        </div>
+        <div class="app" id="AppTasks">
             <div class="version-inputs" id="versions">
                 <input type="text" id="prevVersion" placeholder="Previous version" spellcheck="false" title="Previous version" maxlength="10">
                 <input type="text" id="nextVersion" placeholder="Newer version" spellcheck="false" title="Newer version" maxlength="10">
@@ -23,7 +25,7 @@
             </div>
             <div class="employee-inputs" id="employeeIn">
                 <input type="text" id="employeeInput" placeholder="Employee Name..." spellcheck="false" title="Employee Name" maxlength="10" style="width: 390px;">
-                <button id="closeEmployeeBtn" style="background-color: #232323; border: none; border-radius: 5px;"><img src="assets/_close.png" alt="Add Employee" height="20px" width="20px" title="Add Employee"></button>
+                <button id="closeEmployeeBtn" style="background-color: #232323; border: none; border-radius: 5px; font-size: 23px; color: white; font-family: 'General Sans', sans-serif;">X</button>
             </div>
             <input class="inputName" id="aiInput" type="text" placeholder="Task name or /ai to open AI..." autocomplete="on" style="display: block;" spellcheck="false"/>
             <button id="categorySelection">Maintenance Tasks</button>
