feat: new icons
* new icons for DropDown menu of "Send a Feedback" button

--- a/src/index.html
+++ b/src/index.html
@@ -102,8 +102,8 @@
                         <button id="contactUs" title="Contact Us"><img src="assets/_contact.png" width="20px" height="20px" draggable="false"> Contact Us</button>
                     </div>
                     <div class="feedbackSelection" id="feedbackSelection">
-                        <a id="bug" style="color: white; margin-left: 170px;">Write a Bug Report.</a><br>
-                        <a id="feedbackBtn" style="color: white; margin-left: 170px;">Leave a Feedback.</a>
+                        <a id="bug" style="color: white; margin-left: 170px;"><img src="assets/_bugIcon.png" alt="Bug Icon" width="15px" height="15px">&nbsp; Write a Bug Report.</a><br>
+                        <a id="feedbackBtn" style="color: white; margin-left: 170px;"><img src="assets/_feedbackDropdown.png" alt="Bug Icon" width="15px" height="15px">&nbsp; Leave a Feedback.</a>
                     </div>
                     <br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_actions.png" draggable="false" height="20px" width="20px"> Actions:</h2>
