fix: fixing some icons
* fixed some icons and the "About" section

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     </head>
     <body>
         <div id="mainSection">
-            <h1 style="font-family: 'General Sans', sans-serif; font-size: 60px;"><img src="assets/_maintenanceIcon.png" alt="Icon" style="width: 40px; height: 40px;" draggable="false" title="Tasks"> TASKS</h1>
-            <div class="bubbleMaintenance">Maintenance Tasks <p id="maintenanceNumber" style="display: inline; right: 0px; background-color: rgb(31, 31, 163); border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;null&nbsp;&nbsp;</p></div><br>
+            <h1 style="font-family: 'General Sans', sans-serif; font-size: 60px;"><img src="assets/_list.png" alt="Icon" style="width: 45px; height: 45px;" draggable="false" title="Tasks"> TASKS</h1>
+            <div class="bubbleMaintenance">Maintenance Tasks <p id="maintenanceNumber" style="display: inline; right: 0px; background-color: rgb(31, 31, 163); border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;&nbsp;&nbsp;</p></div><br>
             <ul id="softwareList"></ul><br>
-            <div class="bubbleOut">Out Of Maintenance Tasks <p id="outNumber" style="display: inline; right: 0px; background-color: #88210c; border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;null&nbsp;&nbsp;</p></div><br>
+            <div class="bubbleOut">Out Of Maintenance Tasks <p id="outNumber" style="display: inline; right: 0px; background-color: #88210c; border-radius: 5px; font-family: 'General Sans', sans-serif;">&nbsp;&nbsp;&nbsp;&nbsp;</p></div><br>
             <ul id="fuoriList"></ul><br>
         </div>
         <div class="app" id="AppTasks">
@@ -39,7 +39,7 @@
         <div class="info" id="infoBox">
             <h1 style="font-size: 50px; font-family: 'General Sans', sans-serif;"><img src="assets/_info.png" draggable="false" height="35px" width="35px"> About:</h1>
             <div class="content" style="margin-top: -35px;">
-                <h2 id="version">Version: </h2>
+                <h2 id="version" style="font-size: 30px;"><img src="assets/_icon.png" alt="Icon Logo" width="20px" height="20px">Taskify Business </h2>
                 <p style="margin-top: -20px;" id="latestversion">Latest version avaible: </p>
                 <h2 id="build">Build Number:</h2>
                 <hr>
