fix: fixed chart
* fixed switch theme in chart colors

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                 <h1 style="font-size: 50px; font-family: 'General Sans', sans-serif;"><img src="assets/_chart.png" draggable="false" width="35px" height="35px"> Charts:</h1>
                 <h2><img src="assets/_createTask.png" draggable="false" height="20px" width="20px">  Tasks created:  <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCreated"></p></h2>
                 <h2><img src="assets/_completeIcon.png" draggable="false" height="23px" width="23px">  Tasks completed:  <p style="display: inline; font-weight: 500; font-style: italic;" id="taskCompleted"></p></h2>
-                <canvas id="tasksChart" width="400" height="150" style="background: #232323; border-radius: 10px; margin-bottom: 30px;"></canvas>
+                <canvas id="tasksChart" width="400" height="150" style="border-radius: 10px; margin-bottom: 30px;"></canvas>
                 <h1 style="font-family: 'General Sans', sans-serif; font-size: 35px; text-align: center;"><img src="assets/_settings.png" alt="Charts settings" width="30px" height="30px" draggable="false"> Charts Settings:</h1>
                 <center>
                     <div class="selections">
