--- a/src/boot.html
+++ b/src/boot.html
@@ -19,6 +19,12 @@
     </body>
     <script>
         function OnLoad(){
+            //SET THE THEME FROM LOCALSTORAGE
+            const htmlElement = document.documentElement;
+            const theme = localStorage.getItem("theme");
+
+            htmlElement.setAttribute('data-theme', theme);
+
             setTimeout(() => {
                 document.getElementById("loading").style.animation = "FadeOut 1s forwards";
                 setTimeout(() =>{window.location.href = "index.html";}, 1100)
