--- a/src/popUp.html
+++ b/src/popUp.html
@@ -20,17 +20,17 @@
             <h1 style="font-size: 45px; margin-top: -5px; font-family: 'General Sans', sans-serif;"><img src="assets/_edit.png" draggable="false" width="30px" height="30px"> Edit Task <p style="display: inline; font-style: inherit; font-family: 'General Sans', sans-serif;" class="special">Proprieties:</p></h1>
             <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Switzer', sans-serif;" id="startingText">Edit the properties of the currently selected task.</h4>
             <div class="modify-task-row">
-                <label for="inputName" style="color: white; font-family: 'Switzer', sans-serif;">Task Name: </label>
+                <label for="inputName" style="font-family: 'Switzer', sans-serif;">Task Name: </label>
                 <input type="text" id="inputName" placeholder="Task Name..." title="Enter the new Task Name" maxlength="20">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputPV" style="color: white; font-family: 'Switzer', sans-serif;">Previous Version: </label>
+                <label for="inputPV" style="font-family: 'Switzer', sans-serif;">Previous Version: </label>
                 <input type="text" id="inputPV" placeholder="Previous Version..." title="Optional" maxlength="10">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputNV" style="color: white; font-family: 'Switzer', sans-serif;">Newer Version: </label>
+                <label for="inputNV" style="font-family: 'Switzer', sans-serif;">Newer Version: </label>
                 <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional" maxlength="10">
             </div>
             <br>
