feat: adding new icons
* added new icons for the new UI Graphic

--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@
                     </div>
                     <br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
-                    <label for="checkbox" style="font-size: 20px;">Disables the auto-close of the settings panel.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel('If enabled, this option will disables the auto-close of the settings panel.')" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will disables the auto-close of the settings panel."><br><br>
+                    <label for="checkbox" style="font-size: 20px;"><img src="assets/_automatic.png" alt="Disable Auto-Close" height="25px" width="25px" style="position: relative; top: 5px;">&nbsp;Disables the auto-close of the settings panel.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel('If enabled, this option will disables the auto-close of the settings panel.')" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will disables the auto-close of the settings panel."><br><br>
                     <input type="checkbox" id="characterLimit" style="transform: scale(1.7);">
-                    <label for="characterLimit" style="font-size: 20px;">Enable character limit.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel('If enabled, this option will set a character limit for Task names and version numbers.')" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will set a character limit for Task names and version numbers."><br>
+                    <label for="characterLimit" style="font-size: 20px;"><img src="assets/_keyboardLimit.png" alt="Character Limit" height="25px" width="25px" style="position: relative; top: 5px;">&nbsp;Enable character limit.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel('If enabled, this option will set a character limit for Task names and version numbers.')" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will set a character limit for Task names and version numbers."><br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_appearance.png" draggable="false" height="20px" width="20px"> Appearance:</h2>
                     <select name="selectTheme" id="themeDropDown" class="appTheme">
                         <option value="light"> ☀️ Light Theme</option>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="feedbackSelection" id="feedbackSelection">
                         <a id="bug" style="margin-left: 170px;"><img src="assets/_bugIcon.png" alt="Bug Icon" width="15px" height="15px">&nbsp; Write a Bug Report.</a><br>
-                        <a id="feedbackBtn" style="margin-left: 170px;"><img src="assets/_feedbackDropdown.png" alt="Bug Icon" width="15px" height="15px">&nbsp; Leave a Feedback.</a>
+                        <a id="feedbackBtn" style="margin-left: 170px;"><img src="assets/_feedback.png" alt="Bug Icon" width="15px" height="15px">&nbsp; Leave a Feedback.</a>
                     </div>
                     <br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_actions.png" draggable="false" height="20px" width="20px"> Actions:</h2>
