perf: performance improvements
* small performance improvements and code clean

--- a/src/boot.html
+++ b/src/boot.html
@@ -32,6 +32,6 @@
         }
 
         //DOM ON LOAD
-        document.body.onload = OnLoad();
+        window.addEventListener("load", OnLoad);
     </script>
 </html>
