fix: fixing animations
* fixed animations for Task Creation Screen

--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,8 @@
                     <label for="characterLimit" style="font-size: 20px;"><img src="assets/_keyboardLimit.png" alt="Character Limit" height="25px" width="25px" style="position: relative; top: 5px;">&nbsp;Enable character limit.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel('If enabled, this option will set a character limit for Task names and version numbers.')" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will set a character limit for Task names and version numbers."><br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_appearance.png" draggable="false" height="20px" width="20px"> Appearance:</h2>
                     <select name="selectTheme" id="themeDropDown" class="appTheme">
-                        <option value="light"> ☀️ Light Theme</option>
                         <option value="dark"> 🌙 Dark Theme</option>
+                        <option value="light"> ☀️ Light Theme</option>
                     </select>
                     <br><br><br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_references.png" draggable="false" height="20px" width="20px"> Web References:</h2>
@@ -134,7 +134,5 @@
             </div>
         </div>
     </body>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
-    <script src="js/render.js"></script>
-    <script src="js/fetchDependecies.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script><script src="js/render.js"></script><script src="js/fetchDependecies.js"></script>
 </html>
