perf: performance improvements
* some small performance improvements

--- a/src/boot.html
+++ b/src/boot.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--SETTINGS-->
+        <!--META SETTINGS-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Taskify Business</title>
-        <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/boot.css">
+        <!--FONTS-->
+        <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
     </head>
     <body>
         <center>
