--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -6,8 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="stylesheet" href="css/companyCreation.css">
-        <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
-        <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=general-sans@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=switzer@1&display=swap" rel="stylesheet">
     </head>
@@ -17,11 +15,11 @@
             <h3 style="margin-top: -50px; margin-left: 10px; margin-right: 10px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members, create Tasks and more!</h3>
             <br>
             <div class="inputs">
-                <input type="text" placeholder="Insert here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" maxlength="30" alt="Max 30 characters" spellcheck="false">
+                <input type="text" placeholder="Enter here the name of your company..." style="width: 80%; margin-left: 90px;" id="inputCompany" maxlength="30" alt="Company Name" spellcheck="false" title="Enter the Company name (Max 30 characters)">
             </div>
-            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px" draggable="false"> The company name must contain at least <b style="font-weight: 700;">8 characters</b></p>
+            <p id="warn"><img src="assets/_warn.png" width="20px" height="20px" draggable="false" alt="Warning"> The company name must contain at least <b style="font-weight: 700;">8 characters</b></p>
             <br> <br>
-            <button id="companyCreation" style="font-family: 'General Sans', sans-serif;"><img src="assets/_create.png" draggable="false" height="25px" width="25px"> Create</button>
+            <button id="companyCreation" style="font-family: 'General Sans', sans-serif;" title="Create Company"><img src="assets/_create.png" draggable="false" height="25px" width="25px" alt="Create Company"> Create</button>
         </div>
     </body>
     <script src="js/companyCreation.js"></script>
