--- a/src/index.html
+++ b/src/index.html
@@ -76,12 +76,12 @@
                             <option value="softwareComponents"> Maintenance Tasks</option>
                             <option value="fuoriManutenzione"> Out of Maintenance</option>
                         </select>
-                        <button id="cleanSectionBtn" class="cleanSectionBtn">Mark as Completed</button>
+                        <button id="cleanSectionBtn" class="cleanSectionBtn"><img src="assets/_markAsCompleted.png" alt="Mark as Completed" height="25px" width="25px" class="imageCheckbox">Mark as Completed</button>
                     </div>
                     <br>
                     <div class="cleanSection">
                         <input id="nameCompany" type="text" required placeholder="Enter new Company name..." spellcheck="false">
-                        <button id="changeNameBtn" class="cleanSectionBtn">Change</button>
+                        <button id="changeNameBtn" class="cleanSectionBtn"><img src="assets/_editCompanyName.png" alt="Edit Company Name" height="25px" width="25px" class="imageCheckbox">Change</button>
                     </div>
                     <br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
