fix: reverting the font fix
* fixed again the font on macOS with Manrope font-family

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link href="https://api.fontshare.com/v2/css?f[]=general-sans@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=switzer@1&display=swap" rel="stylesheet">
+        <link href="https://api.fontshare.com/v2/css?f[]=manrope@1&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="mainSection">
