--- a/src/boot.html
+++ b/src/boot.html
@@ -12,7 +12,8 @@
     <body>
         <center>
             <div id="loading">
-                <div class="logo"></div>
+                <div class="logo" style="display: none;"></div>
+                <img src="assets/iconComposer/iconMacOs.png" alt="macOS Boot" class="logoMacOS" draggable="false">
                 <br> <br> <br>
                 <span class="loader" style="margin-top: 200px;"></span>
             </div>
@@ -20,6 +21,10 @@
     </body>
     <script>
         function OnLoad(){
+            //SET THE LOGO
+            document.querySelector(".logo").style.display = (window.api.platform == "darwin") ? "none" : "block";
+            document.querySelector(".logoMacOS").style.display = (window.api.platform == "darwin") ? "block" : "none";
+
             //SET THE THEME FROM LOCALSTORAGE
             const htmlElement = document.documentElement;
             const theme = localStorage.getItem("theme");
