fix: fixing images
* fixed icons to buttons in Settings
* fixed boot icon

--- a/src/boot.html
+++ b/src/boot.html
@@ -13,7 +13,7 @@
         <center>
             <div id="loading">
                 <div id="logo" style="display: none;"></div>
-                <img src="assets/iconComposer/iconMacOs.png" alt="macOS Boot" id="logoMacOS" draggable="false">
+                <img src="assets/iconComposer/iconMacOs.png" alt="macOS Boot" id="logoMacOS" draggable="false" style="display: none;">
                 <br> <br> <br>
                 <span class="loader" style="margin-top: 200px;"></span>
             </div>
