--- a/src/index.html
+++ b/src/index.html
@@ -74,15 +74,15 @@
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_general.png" draggable="false" height="20px" width="20px"> General:</h2>
                     <div class="cleanSection">
                         <select name="selectCategory" id="categoryClean">
-                            <option value="softwareComponents"> Maintenance Tasks</option>
-                            <option value="fuoriManutenzione"> Out of Maintenance</option>
+                            <option value="softwareComponents">&nbsp;Maintenance Tasks</option>
+                            <option value="fuoriManutenzione">&nbsp;Out of Maintenance</option>
                         </select>
-                        <button id="cleanSectionBtn" class="cleanSectionBtn"><img src="assets/_markAsCompleted.png" alt="Mark as Completed" height="25px" width="25px" class="imageCheckbox" draggable="false">Mark as Completed</button>
+                        <button id="cleanSectionBtn" class="cleanSectionBtn"><img src="assets/_markAsCompleted.png" alt="Mark as Completed" height="20px" width="20px" class="imageCheckbox" draggable="false" style="top: 2px;">Mark as Completed</button>
                     </div>
                     <br>
                     <div class="cleanSection">
                         <input id="nameCompany" type="text" required placeholder="Enter new Company name..." spellcheck="false">
-                        <button id="changeNameBtn" class="cleanSectionBtn"><img src="assets/_editCompanyName.png" alt="Edit Company Name" height="25px" width="25px" class="imageCheckbox" draggable="false">Change</button>
+                        <button id="changeNameBtn" class="cleanSectionBtn"><img src="assets/_editCompanyName.png" alt="Edit Company Name" height="20px" width="20px" class="imageCheckbox" draggable="false" style="top: 2px;">Change</button>
                     </div>
                     <br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_taskSettings.png" draggable="false" height="20px" width="20px"> Task Creation:</h2><br>
