fix: fixing settings section
* renamed "Task Settings" to "User Preferences"

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                         <button id="changeNameBtn" class="cleanSectionBtn"><img src="assets/_editCompanyName.png" alt="Edit Company Name" height="20px" width="20px" class="imageCheckbox" draggable="false" style="top: 2px;">Change</button>
                     </div>
                     <br>
-                    <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_taskSettings.png" draggable="false" height="20px" width="20px"> Task Creation:</h2><br>
+                    <h2 style="text-align: center; font-family: 'General Sans', sans-serif;"><img src="assets/_userSettings.png" draggable="false" height="20px" width="20px"> User Preferences:</h2><br>
                     <input type="checkbox" id="checkbox" style="transform: scale(1.7);">
                     <label for="checkbox" style="font-size: 20px;"><img src="assets/_automatic.png" alt="Disable Auto-Close" height="25px" width="25px" class="imageCheckbox" draggable="false">&nbsp;Disables the auto-close of the settings panel.</label> <img class="aboutBeta" draggable="false" onclick="ShowInfoPanel('If enabled, this option will disables the auto-close of the settings panel.')" src="assets/_about.png" width="20px" height="20px" title="If enabled, this option will disables the auto-close of the settings panel."><br><br>
                     <input type="checkbox" id="characterLimit" style="transform: scale(1.7);">
